Bug 581192: Fix compiler errors in runner